--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 .carousel {
-  width: 600px;
+  width: 600px auto;
   height: 400px;
   text-align: center;
   margin: 0 auto;
@@ -25,6 +25,31 @@
   max-width: 100%;
   height: 600px;
 }
+
+@media (max-width: 576px) {
+  .carousel-item img {
+    height: 300px;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  .carousel-item img {
+    height: 400px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .carousel-item img {
+    height: 500px;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  .carousel-item img {
+    height: 600px;
+  }
+}
+
 
 .modal {
   z-index: 9999 !important;
